improved radius-based training & sundry other improvements

--- a/project.bib
+++ b/project.bib
@@ -333,3 +333,56 @@ url = "https://doi.org/10.1214/17-AOS1634",
 volume = "47",
 year = "2019"
 }
+
+@misc{levine2019wasserstein,
+      title={Wasserstein Smoothing: Certified Robustness against Wasserstein Adversarial Attacks}, 
+      author={Alexander Levine and Soheil Feizi},
+      year={2019},
+      eprint={1910.10783},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{xiang2021patchguard,
+      title={PatchGuard: A Provably Robust Defense against Adversarial Patches via Small Receptive Fields and Masking}, 
+      author={Chong Xiang and Arjun Nitin Bhagoji and Vikash Sehwag and Prateek Mittal},
+      year={2021},
+      eprint={2005.10884},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@inproceedings{lui2015celeba,
+ title = {Deep Learning Face Attributes in the Wild},
+ author = {Liu, Ziwei and Luo, Ping and Wang, Xiaogang and Tang, Xiaoou},
+ booktitle = {Proceedings of International Conference on Computer Vision (ICCV)},
+ month = {December},
+ year = {2015} 
+}
+
+@inproceedings{resnet,
+author = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+year = {2016},
+month = {06},
+pages = {770-778},
+title = {Deep Residual Learning for Image Recognition},
+doi = {10.1109/CVPR.2016.90}
+}
+
+@misc{kurakin2017adversarial,
+      title={Adversarial Machine Learning at Scale}, 
+      author={Alexey Kurakin and Ian Goodfellow and Samy Bengio},
+      year={2017},
+      eprint={1611.01236},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{madry2019deep,
+      title={Towards Deep Learning Models Resistant to Adversarial Attacks}, 
+      author={Aleksander Madry and Aleksandar Makelov and Ludwig Schmidt and Dimitris Tsipras and Adrian Vladu},
+      year={2019},
+      eprint={1706.06083},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
